all features done, needs more style

--- a/index.html
+++ b/index.html
@@ -1,74 +1,35 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta >
-    <meta charset="utf-8">
-    <title>Matching Game</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-    <link rel="stylesheet" href="./style.css">
-    <script src="./app.js" defer></script>
+  <meta>
+  <meta charset="utf-8">
+  <title>Matching Game</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./style.css">
+  <script src="./app.js" defer></script>
 </head>
+
 <body>
-    
-    <div class="app">
+
+  <div class="app">
     <div class="container" id="game-container">
-        <header>
-            <h1>Matching Game</h1>
-        </header>
+      <header>
+        <h1>Matching Game</h1>
+      </header>
 
-        <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
+      <section class="score-panel">
 
-        	<span class="moves">3</span> Moves
+        <span class="moves">3</span> Moves
 
-            <div id="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
-        </section>
+        <div id="restart">
+          <i class="fa fa-repeat"></i>
+        </div>
+      </section>
     </div>
-    <div class="what"><div class="box-of-star1">
-        <div class="star star-position1"></div>
-        <div class="star star-position2"></div>
-        <div class="star star-position3"></div>
-        <div class="star star-position4"></div>
-        <div class="star star-position5"></div>
-        <div class="star star-position6"></div>
-        <div class="star star-position7"></div>
-      </div>
-      <div class="box-of-star2">
-        <div class="star star-position1"></div>
-        <div class="star star-position2"></div>
-        <div class="star star-position3"></div>
-        <div class="star star-position4"></div>
-        <div class="star star-position5"></div>
-        <div class="star star-position6"></div>
-        <div class="star star-position7"></div>
-      </div>
-      <div class="box-of-star3">
-        <div class="star star-position1"></div>
-        <div class="star star-position2"></div>
-        <div class="star star-position3"></div>
-        <div class="star star-position4"></div>
-        <div class="star star-position5"></div>
-        <div class="star star-position6"></div>
-        <div class="star star-position7"></div>
-      </div>
-      <div class="box-of-star4">
-        <div class="star star-position1"></div>
-        <div class="star star-position2"></div>
-        <div class="star star-position3"></div>
-        <div class="star star-position4"></div>
-        <div class="star star-position5"></div>
-        <div class="star star-position6"></div>
-        <div class="star star-position7"></div>
-      </div>
+    <div class="what">
       <div data-js="astro" class="astronaut">
         <div class="head"></div>
         <div class="arm arm-left"></div>
@@ -79,7 +40,17 @@
         <div class="leg leg-left"></div>
         <div class="leg leg-right"></div>
         <div class="schoolbag"></div>
-      </div></div>
-</div>
+      </div>
+      <div class="box2 sb10"><p id="typing-text"></p></div>
+  
+      
+    </div>
+  </div>
+
+
+
+
+  
 </body>
+
 </html>
